@@ -1,16 +1,3 @@
-[root@caddeapllx1945 bin]# pkill -9 java
-[root@caddeapllx1945 bin]#
-[root@caddeapllx1945 bin]#
-[root@caddeapllx1945 bin]#
-[root@caddeapllx1945 bin]#
-[root@caddeapllx1945 bin]# cd /opt/jboss-eap/bin
-nohup ./standalone.sh -c standalone-full-ha.xml > /tmp/jboss-full.log 2>&1 &
-[1] 24278
-[root@caddeapllx1945 bin]#
-[1]+  Fim da execução com status 1      nohup ./standalone.sh -c standalone-full-ha.xml > /tmp/jboss-full.log 2>&1
-[root@caddeapllx1945 bin]#
-[root@caddeapllx1945 bin]#
-[root@caddeapllx1945 bin]#
 [root@caddeapllx1945 bin]# cat /tmp/jboss-full.log
 nohup: ignorando entrada
 =========================================================================
@@ -25,4 +12,205 @@ nohup: ignorando entrada
 
 =========================================================================
 
+[root@caddeapllx1945 bin]# tail -200 /logs/jboss/server.log
+        jboss.modules.dir = /opt/jboss-eap/modules
+        jboss.modules.policy-permissions = true
+        jboss.modules.system.pkgs = org.jboss.byteman,org.jboss.logmanager
+        jboss.node.name = caddeapllx1945
+        jboss.qualified.host.name = caddeapllx1945.agil.nprd.caixa.gov.br
+        jboss.server.base.dir = /opt/jboss-eap/standalone
+        jboss.server.config.dir = /opt/jboss-eap/standalone/configuration
+        jboss.server.data.dir = /opt/jboss-eap/standalone/data
+        jboss.server.deploy.dir = /opt/jboss-eap/standalone/data/content
+        jboss.server.log.dir = /opt/jboss-eap/standalone/log
+        jboss.server.name = caddeapllx1945
+        jboss.server.persist.config = true
+        jboss.server.temp.dir = /opt/jboss-eap/standalone/tmp
+        jdk.serialFilter = maxbytes=10485760;maxdepth=128;maxarray=100000;maxrefs=300000
+        line.separator =
+
+        logging.configuration = file:/opt/jboss-eap/standalone/configuration/logging.properties
+        module.path = /opt/jboss-eap/modules
+        org.jboss.boot.log.file = /opt/jboss-eap/standalone/log/server.log
+        org.jboss.resolver.warning = true
+        os.arch = amd64
+        os.name = Linux
+        os.version = 5.14.0-362.8.1.el9_3.x86_64
+        path.separator = :
+        sun.arch.data.model = 64
+        sun.boot.class.path = /usr/lib/jvm/java-1.8.0-openjdk-1.8.0.402.b06-2.el9.x86_64/jre/lib/resources.jar:/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.402.b06-2.el9.x86_64/jre/lib/rt.jar:/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.402.b06-2.el9.x86_64/jre/lib/sunrsasign.jar:/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.402.b06-2.el9.x86_64/jre/lib/jsse.jar:/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.402.b06-2.el9.x86_64/jre/lib/jce.jar:/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.402.b06-2.el9.x86_64/jre/lib/charsets.jar:/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.402.b06-2.el9.x86_64/jre/lib/jfr.jar:/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.402.b06-2.el9.x86_64/jre/classes:/opt/jboss-eap/modules/system/layers/base/org/wildfly/common/main/wildfly-common-1.5.4.Final-redhat-00001.jar:/opt/jboss-eap/modules/system/layers/base/org/jboss/logmanager/main/jboss-logmanager-2.1.18.Final-redhat-00001.jar
+        sun.boot.library.path = /usr/lib/jvm/java-1.8.0-openjdk-1.8.0.402.b06-2.el9.x86_64/jre/lib/amd64
+        sun.cpu.endian = little
+        sun.cpu.isalist =
+        sun.io.unicode.encoding = UnicodeLittle
+        sun.java.command = /opt/jboss-eap/jboss-modules.jar -mp /opt/jboss-eap/modules org.jboss.as.standalone -Djboss.home.dir=/opt/jboss-eap -Djboss.server.base.dir=/opt/jboss-eap/standalone -c standalone-full-ha.xml
+        sun.java.launcher = SUN_STANDARD
+        sun.jnu.encoding = UTF-8
+        sun.management.compiler = HotSpot 64-Bit Tiered Compilers
+        sun.os.patch.level = unknown
+        sun.util.logging.disableCallerCheck = true
+        user.country = BR
+        user.dir = /opt/jboss-eap/bin
+        user.home = /root
+        user.language = pt
+        user.name = root
+        user.timezone = America/Sao_Paulo
+2026-06-16 14:53:21,928 DEBUG [org.jboss.as.config] (MSC service thread 1-2) Argumentos da VM: -D[Standalone] -verbose:gc -Xloggc:/opt/jboss-eap/standalone/log/gc.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=5 -XX:GCLogFileSize=3M -XX:-TraceClassUnloading -Djdk.serialFilter=maxbytes=10485760;maxdepth=128;maxarray=100000;maxrefs=300000 -Xms1024m -Xmx2048m -XX:MetaspaceSize=96M -XX:MaxMetaspaceSize=256m -Djava.net.preferIPv4Stack=true -Djboss.modules.system.pkgs=org.jboss.byteman,org.jboss.logmanager -Djava.awt.headless=true -Djavax.net.ssl.trustStore=/opt/jboss-eap/standalone/configuration/caixa-truststore-azurepush-2024-acteste.jks -Djavax.net.ssl.trustStorePassword=changeit -Djboss.modules.policy-permissions=true -XX:+ExplicitGCInvokesConcurrent -XX:+UseG1GC -XX:MaxGCPauseMillis=500 -Xbootclasspath/a:/opt/jboss-eap/modules/system/layers/base/org/wildfly/common/main/wildfly-common-1.5.4.Final-redhat-00001.jar -Xbootclasspath/a:/opt/jboss-eap/modules/system/layers/base/org/jboss/logmanager/main/jboss-logmanager-2.1.18.Final-redhat-00001.jar -Dsun.util.logging.disableCallerCheck=true -Djava.util.logging.manager=org.jboss.logmanager.LogManager -Dorg.jboss.boot.log.file=/opt/jboss-eap/standalone/log/server.log -Dlogging.configuration=file:/opt/jboss-eap/standalone/configuration/logging.properties
+2026-06-16 14:53:22,501 INFO  [org.wildfly.security] (ServerService Thread Pool -- 31) ELY00001: WildFly Elytron version 1.15.21.Final-redhat-00001
+2026-06-16 14:53:22,701 INFO  [org.jboss.as.controller.management-deprecated] (ServerService Thread Pool -- 4) WFLYCTL0033: A extensão 'security' é obsoleta e talvez não seja suportada em versões futuras
+2026-06-16 14:53:22,945 INFO  [org.jboss.as.controller.management-deprecated] (Controller Boot Thread) WFLYCTL0028: O atributo 'security-realm' no recurso, no endereço '/core-service=management/management-interface=http-interface', é obsoleto e pode ser removido em uma versão futura. Veja a descrição do atributo no resultado da operação read-resource-description para saber mais sobre a substituição.
+2026-06-16 14:53:22,979 INFO  [org.jboss.as.server.deployment.scanner] (DeploymentScanner-threads - 1) WFLYDS0015: A nova tentativa implantação de wmq.jmsra.rar falhou
+2026-06-16 14:53:22,979 INFO  [org.jboss.as.server.deployment.scanner] (DeploymentScanner-threads - 1) WFLYDS0015: A nova tentativa implantação de applicationinsights-agent.jar falhou
+2026-06-16 14:53:22,980 INFO  [org.jboss.as.server.deployment.scanner] (DeploymentScanner-threads - 1) WFLYDS0015: A nova tentativa implantação de simpg.war falhou
+2026-06-16 14:53:23,006 INFO  [org.jboss.as.controller.management-deprecated] (ServerService Thread Pool -- 3) WFLYCTL0028: O atributo 'security-realm' no recurso, no endereço '/subsystem=undertow/server=default-server/https-listener=https', é obsoleto e pode ser removido em uma versão futura. Veja a descrição do atributo no resultado da operação read-resource-description para saber mais sobre a substituição.
+2026-06-16 14:53:23,017 INFO  [org.jboss.as.controller.management-deprecated] (ServerService Thread Pool -- 20) WFLYCTL0028: O atributo 'shared' no recurso, no endereço '/subsystem=jgroups/stack=tcpping/transport=TCP', é obsoleto e pode ser removido em uma versão futura. Veja a descrição do atributo no resultado da operação read-resource-description para saber mais sobre a substituição.
+2026-06-16 14:53:23,022 WARN  [org.jboss.as.clustering.jgroups] (ServerService Thread Pool -- 20) WFLYCLJG0030: O protocolo MERGE2 é obsoleto e será atualizado automaticamente para MERGE3
+2026-06-16 14:53:23,023 WARN  [org.jboss.as.clustering.jgroups] (ServerService Thread Pool -- 20) WFLYCLJG0030: O protocolo pbcast.NAKACK é obsoleto e será atualizado automaticamente para pbcast.NAKACK2
+2026-06-16 14:53:23,023 WARN  [org.jboss.as.clustering.jgroups] (ServerService Thread Pool -- 20) WFLYCLJG0030: O protocolo UNICAST2 é obsoleto e será atualizado automaticamente para UNICAST3
+2026-06-16 14:53:23,529 ERROR [org.jboss.as.controller.management-operation] (Controller Boot Thread) WFLYCTL0013: Falha na operação ("add") - endereço ([("core-service" => "vault")]): org.jboss.as.server.services.security.VaultReaderException: WFLYSRV0076: Erro ao inicializar o cofre -- org.jboss.security.vault.SecurityVaultException: PBOX00142: Keystore password should be either masked or prefixed with one of {EXT}, {EXTC}, {CMD}, {CMDC}, {CLASS}
+        at org.jboss.as.server.services.security.VaultReaderImpl.createVault(RuntimeVaultReader.java:159)
+        at org.jboss.as.server.services.security.RuntimeVaultReader.createVault(RuntimeVaultReader.java:100)
+        at org.jboss.as.server.services.security.VaultAddHandler.performRuntime(VaultAddHandler.java:96)
+        at org.jboss.as.controller.AbstractAddStepHandler.performRuntime(AbstractAddStepHandler.java:343)
+        at org.jboss.as.controller.AbstractAddStepHandler$1.execute(AbstractAddStepHandler.java:164)
+        at org.jboss.as.controller.AbstractOperationContext.executeStep(AbstractOperationContext.java:1063)
+        at org.jboss.as.controller.AbstractOperationContext.processStages(AbstractOperationContext.java:784)
+        at org.jboss.as.controller.AbstractOperationContext.executeOperation(AbstractOperationContext.java:470)
+        at org.jboss.as.controller.OperationContextImpl.executeOperation(OperationContextImpl.java:1430)
+        at org.jboss.as.controller.ModelControllerImpl.boot(ModelControllerImpl.java:559)
+        at org.jboss.as.controller.AbstractControllerService.boot(AbstractControllerService.java:546)
+        at org.jboss.as.controller.AbstractControllerService.boot(AbstractControllerService.java:508)
+        at org.jboss.as.server.ServerService.boot(ServerService.java:462)
+        at org.jboss.as.server.ServerService.boot(ServerService.java:415)
+        at org.jboss.as.controller.AbstractControllerService$1.run(AbstractControllerService.java:447)
+        at java.lang.Thread.run(Thread.java:750)
+Caused by: org.jboss.security.vault.SecurityVaultException: PBOX00142: Keystore password should be either masked or prefixed with one of {EXT}, {EXTC}, {CMD}, {CMDC}, {CLASS}
+        at org.picketbox.plugins.vault.PicketBoxSecurityVault.init(PicketBoxSecurityVault.java:173)
+        at org.jboss.as.server.services.security.VaultReaderImpl.createVault(RuntimeVaultReader.java:157)
+        ... 15 more
+
+2026-06-16 14:53:23,534 FATAL [org.jboss.as.server] (Controller Boot Thread) WFLYSRV0056: A inicialização do servidor falhou numa maneira irrecuperável: encerrando. Consulte mensagens anteriores para maiores detalhes.
+2026-06-16 14:53:23,552 INFO  [org.jboss.as] (MSC service thread 1-1) WFLYSRV0050: JBoss EAP 7.4.15.GA (WildFly Core 15.0.33.Final-redhat-00001) interrompido em 7ms
+2026-06-16 14:54:44,809 INFO  [org.jboss.modules] (main) JBoss Modules version 1.12.2.Final-redhat-00001
+2026-06-16 14:54:44,992 INFO  [org.jboss.msc] (main) JBoss MSC version 1.4.13.Final-redhat-00001
+2026-06-16 14:54:44,998 INFO  [org.jboss.threads] (main) JBoss Threads version 2.4.0.Final-redhat-00001
+2026-06-16 14:54:45,059 INFO  [org.jboss.as] (MSC service thread 1-2) WFLYSRV0049: Inicializando JBoss EAP 7.4.15.GA (WildFly Core 15.0.33.Final-redhat-00001)
+2026-06-16 14:54:45,060 DEBUG [org.jboss.as.config] (MSC service thread 1-2) Propriedades de sistema configurado:
+        [Standalone] =
+        awt.toolkit = sun.awt.X11.XToolkit
+        file.encoding = UTF-8
+        file.encoding.pkg = sun.io
+        file.separator = /
+        java.awt.graphicsenv = sun.awt.X11GraphicsEnvironment
+        java.awt.headless = true
+        java.awt.printerjob = sun.print.PSPrinterJob
+        java.class.path = /opt/jboss-eap/jboss-modules.jar
+        java.class.version = 52.0
+        java.endorsed.dirs = /usr/lib/jvm/java-1.8.0-openjdk-1.8.0.402.b06-2.el9.x86_64/jre/lib/endorsed
+        java.ext.dirs = /usr/lib/jvm/java-1.8.0-openjdk-1.8.0.402.b06-2.el9.x86_64/jre/lib/ext:/usr/java/packages/lib/ext
+        java.home = /usr/lib/jvm/java-1.8.0-openjdk-1.8.0.402.b06-2.el9.x86_64/jre
+        java.io.tmpdir = /tmp
+        java.library.path = /usr/java/packages/lib/amd64:/usr/lib64:/lib64:/lib:/usr/lib
+        java.net.preferIPv4Stack = true
+        java.runtime.name = OpenJDK Runtime Environment
+        java.runtime.version = 1.8.0_402-b06
+        java.specification.maintenance.version = 5
+        java.specification.name = Java Platform API Specification
+        java.specification.vendor = Oracle Corporation
+        java.specification.version = 1.8
+        java.util.logging.manager = org.jboss.logmanager.LogManager
+        java.vendor = Red Hat, Inc.
+        java.vendor.url = https://www.redhat.com/
+        java.vendor.url.bug = https://access.redhat.com/support/cases/
+        java.version = 1.8.0_402
+        java.vm.info = mixed mode
+        java.vm.name = OpenJDK 64-Bit Server VM
+        java.vm.specification.name = Java Virtual Machine Specification
+        java.vm.specification.vendor = Oracle Corporation
+        java.vm.specification.version = 1.8
+        java.vm.vendor = Red Hat, Inc.
+        java.vm.version = 25.402-b06
+        javax.management.builder.initial = org.jboss.as.jmx.PluggableMBeanServerBuilder
+        javax.net.ssl.trustStore = /opt/jboss-eap/standalone/configuration/caixa-truststore-azurepush-2024-acteste.jks
+        javax.net.ssl.trustStorePassword = <redacted>
+        jboss.home.dir = /opt/jboss-eap
+        jboss.host.name = caddeapllx1945
+        jboss.modules.dir = /opt/jboss-eap/modules
+        jboss.modules.policy-permissions = true
+        jboss.modules.system.pkgs = org.jboss.byteman,org.jboss.logmanager
+        jboss.node.name = caddeapllx1945
+        jboss.qualified.host.name = caddeapllx1945.agil.nprd.caixa.gov.br
+        jboss.server.base.dir = /opt/jboss-eap/standalone
+        jboss.server.config.dir = /opt/jboss-eap/standalone/configuration
+        jboss.server.data.dir = /opt/jboss-eap/standalone/data
+        jboss.server.deploy.dir = /opt/jboss-eap/standalone/data/content
+        jboss.server.log.dir = /opt/jboss-eap/standalone/log
+        jboss.server.name = caddeapllx1945
+        jboss.server.persist.config = true
+        jboss.server.temp.dir = /opt/jboss-eap/standalone/tmp
+        jdk.serialFilter = maxbytes=10485760;maxdepth=128;maxarray=100000;maxrefs=300000
+        line.separator =
+
+        logging.configuration = file:/opt/jboss-eap/standalone/configuration/logging.properties
+        module.path = /opt/jboss-eap/modules
+        org.jboss.boot.log.file = /opt/jboss-eap/standalone/log/server.log
+        org.jboss.resolver.warning = true
+        os.arch = amd64
+        os.name = Linux
+        os.version = 5.14.0-362.8.1.el9_3.x86_64
+        path.separator = :
+        sun.arch.data.model = 64
+        sun.boot.class.path = /usr/lib/jvm/java-1.8.0-openjdk-1.8.0.402.b06-2.el9.x86_64/jre/lib/resources.jar:/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.402.b06-2.el9.x86_64/jre/lib/rt.jar:/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.402.b06-2.el9.x86_64/jre/lib/sunrsasign.jar:/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.402.b06-2.el9.x86_64/jre/lib/jsse.jar:/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.402.b06-2.el9.x86_64/jre/lib/jce.jar:/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.402.b06-2.el9.x86_64/jre/lib/charsets.jar:/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.402.b06-2.el9.x86_64/jre/lib/jfr.jar:/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.402.b06-2.el9.x86_64/jre/classes:/opt/jboss-eap/modules/system/layers/base/org/wildfly/common/main/wildfly-common-1.5.4.Final-redhat-00001.jar:/opt/jboss-eap/modules/system/layers/base/org/jboss/logmanager/main/jboss-logmanager-2.1.18.Final-redhat-00001.jar
+        sun.boot.library.path = /usr/lib/jvm/java-1.8.0-openjdk-1.8.0.402.b06-2.el9.x86_64/jre/lib/amd64
+        sun.cpu.endian = little
+        sun.cpu.isalist =
+        sun.io.unicode.encoding = UnicodeLittle
+        sun.java.command = /opt/jboss-eap/jboss-modules.jar -mp /opt/jboss-eap/modules org.jboss.as.standalone -Djboss.home.dir=/opt/jboss-eap -Djboss.server.base.dir=/opt/jboss-eap/standalone -c standalone-full-ha.xml
+        sun.java.launcher = SUN_STANDARD
+        sun.jnu.encoding = UTF-8
+        sun.management.compiler = HotSpot 64-Bit Tiered Compilers
+        sun.os.patch.level = unknown
+        sun.util.logging.disableCallerCheck = true
+        user.country = BR
+        user.dir = /opt/jboss-eap/bin
+        user.home = /root
+        user.language = pt
+        user.name = root
+        user.timezone = America/Sao_Paulo
+2026-06-16 14:54:45,060 DEBUG [org.jboss.as.config] (MSC service thread 1-2) Argumentos da VM: -D[Standalone] -verbose:gc -Xloggc:/opt/jboss-eap/standalone/log/gc.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=5 -XX:GCLogFileSize=3M -XX:-TraceClassUnloading -Djdk.serialFilter=maxbytes=10485760;maxdepth=128;maxarray=100000;maxrefs=300000 -Xms1024m -Xmx2048m -XX:MetaspaceSize=96M -XX:MaxMetaspaceSize=256m -Djava.net.preferIPv4Stack=true -Djboss.modules.system.pkgs=org.jboss.byteman,org.jboss.logmanager -Djava.awt.headless=true -Djavax.net.ssl.trustStore=/opt/jboss-eap/standalone/configuration/caixa-truststore-azurepush-2024-acteste.jks -Djavax.net.ssl.trustStorePassword=changeit -Djboss.modules.policy-permissions=true -XX:+ExplicitGCInvokesConcurrent -XX:+UseG1GC -XX:MaxGCPauseMillis=500 -Xbootclasspath/a:/opt/jboss-eap/modules/system/layers/base/org/wildfly/common/main/wildfly-common-1.5.4.Final-redhat-00001.jar -Xbootclasspath/a:/opt/jboss-eap/modules/system/layers/base/org/jboss/logmanager/main/jboss-logmanager-2.1.18.Final-redhat-00001.jar -Dsun.util.logging.disableCallerCheck=true -Djava.util.logging.manager=org.jboss.logmanager.LogManager -Dorg.jboss.boot.log.file=/opt/jboss-eap/standalone/log/server.log -Dlogging.configuration=file:/opt/jboss-eap/standalone/configuration/logging.properties
+2026-06-16 14:54:45,633 INFO  [org.wildfly.security] (ServerService Thread Pool -- 3) ELY00001: WildFly Elytron version 1.15.21.Final-redhat-00001
+2026-06-16 14:54:45,899 INFO  [org.jboss.as.controller.management-deprecated] (ServerService Thread Pool -- 4) WFLYCTL0033: A extensão 'security' é obsoleta e talvez não seja suportada em versões futuras
+2026-06-16 14:54:46,132 INFO  [org.jboss.as.controller.management-deprecated] (Controller Boot Thread) WFLYCTL0028: O atributo 'security-realm' no recurso, no endereço '/core-service=management/management-interface=http-interface', é obsoleto e pode ser removido em uma versão futura. Veja a descrição do atributo no resultado da operação read-resource-description para saber mais sobre a substituição.
+2026-06-16 14:54:46,174 INFO  [org.jboss.as.server.deployment.scanner] (DeploymentScanner-threads - 1) WFLYDS0015: A nova tentativa implantação de wmq.jmsra.rar falhou
+2026-06-16 14:54:46,175 INFO  [org.jboss.as.server.deployment.scanner] (DeploymentScanner-threads - 1) WFLYDS0015: A nova tentativa implantação de applicationinsights-agent.jar falhou
+2026-06-16 14:54:46,175 INFO  [org.jboss.as.server.deployment.scanner] (DeploymentScanner-threads - 1) WFLYDS0015: A nova tentativa implantação de simpg.war falhou
+2026-06-16 14:54:46,183 INFO  [org.jboss.as.controller.management-deprecated] (ServerService Thread Pool -- 15) WFLYCTL0028: O atributo 'shared' no recurso, no endereço '/subsystem=jgroups/stack=tcpping/transport=TCP', é obsoleto e pode ser removido em uma versão futura. Veja a descrição do atributo no resultado da operação read-resource-description para saber mais sobre a substituição.
+2026-06-16 14:54:46,184 WARN  [org.jboss.as.clustering.jgroups] (ServerService Thread Pool -- 15) WFLYCLJG0030: O protocolo MERGE2 é obsoleto e será atualizado automaticamente para MERGE3
+2026-06-16 14:54:46,185 WARN  [org.jboss.as.clustering.jgroups] (ServerService Thread Pool -- 15) WFLYCLJG0030: O protocolo pbcast.NAKACK é obsoleto e será atualizado automaticamente para pbcast.NAKACK2
+2026-06-16 14:54:46,185 WARN  [org.jboss.as.clustering.jgroups] (ServerService Thread Pool -- 15) WFLYCLJG0030: O protocolo UNICAST2 é obsoleto e será atualizado automaticamente para UNICAST3
+2026-06-16 14:54:46,289 INFO  [org.jboss.as.controller.management-deprecated] (ServerService Thread Pool -- 38) WFLYCTL0028: O atributo 'security-realm' no recurso, no endereço '/subsystem=undertow/server=default-server/https-listener=https', é obsoleto e pode ser removido em uma versão futura. Veja a descrição do atributo no resultado da operação read-resource-description para saber mais sobre a substituição.
+2026-06-16 14:54:46,726 ERROR [org.jboss.as.controller.management-operation] (Controller Boot Thread) WFLYCTL0013: Falha na operação ("add") - endereço ([("core-service" => "vault")]): org.jboss.as.server.services.security.VaultReaderException: WFLYSRV0076: Erro ao inicializar o cofre -- org.jboss.security.vault.SecurityVaultException: PBOX00142: Keystore password should be either masked or prefixed with one of {EXT}, {EXTC}, {CMD}, {CMDC}, {CLASS}
+        at org.jboss.as.server.services.security.VaultReaderImpl.createVault(RuntimeVaultReader.java:159)
+        at org.jboss.as.server.services.security.RuntimeVaultReader.createVault(RuntimeVaultReader.java:100)
+        at org.jboss.as.server.services.security.VaultAddHandler.performRuntime(VaultAddHandler.java:96)
+        at org.jboss.as.controller.AbstractAddStepHandler.performRuntime(AbstractAddStepHandler.java:343)
+        at org.jboss.as.controller.AbstractAddStepHandler$1.execute(AbstractAddStepHandler.java:164)
+        at org.jboss.as.controller.AbstractOperationContext.executeStep(AbstractOperationContext.java:1063)
+        at org.jboss.as.controller.AbstractOperationContext.processStages(AbstractOperationContext.java:784)
+        at org.jboss.as.controller.AbstractOperationContext.executeOperation(AbstractOperationContext.java:470)
+        at org.jboss.as.controller.OperationContextImpl.executeOperation(OperationContextImpl.java:1430)
+        at org.jboss.as.controller.ModelControllerImpl.boot(ModelControllerImpl.java:559)
+        at org.jboss.as.controller.AbstractControllerService.boot(AbstractControllerService.java:546)
+        at org.jboss.as.controller.AbstractControllerService.boot(AbstractControllerService.java:508)
+        at org.jboss.as.server.ServerService.boot(ServerService.java:462)
+        at org.jboss.as.server.ServerService.boot(ServerService.java:415)
+        at org.jboss.as.controller.AbstractControllerService$1.run(AbstractControllerService.java:447)
+        at java.lang.Thread.run(Thread.java:750)
+Caused by: org.jboss.security.vault.SecurityVaultException: PBOX00142: Keystore password should be either masked or prefixed with one of {EXT}, {EXTC}, {CMD}, {CMDC}, {CLASS}
+        at org.picketbox.plugins.vault.PicketBoxSecurityVault.init(PicketBoxSecurityVault.java:173)
+        at org.jboss.as.server.services.security.VaultReaderImpl.createVault(RuntimeVaultReader.java:157)
+        ... 15 more
+
+2026-06-16 14:54:46,733 FATAL [org.jboss.as.server] (Controller Boot Thread) WFLYSRV0056: A inicialização do servidor falhou numa maneira irrecuperável: encerrando. Consulte mensagens anteriores para maiores detalhes.
+2026-06-16 14:54:46,745 INFO  [org.jboss.as] (MSC service thread 1-4) WFLYSRV0050: JBoss EAP 7.4.15.GA (WildFly Core 15.0.33.Final-redhat-00001) interrompido em 6ms
 [root@caddeapllx1945 bin]#
